--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Hello World!</h1>
+<div>
+    <app-nav-bar></app-nav-bar>
+    <app-search-box></app-search-box>
+    <router-outlet></router-outlet>
+</div>
