--- a/src/app/components/icons/icons.component.css
+++ b/src/app/components/icons/icons.component.css
@@ -24,11 +24,12 @@ h5{
 }
 
 .intro {
-  background-color: #1c7193ad;
+  background-color: white;
+  margin-bottom: 25px;
 }
 
 h5 {
-  color: white;
+  color: #1c7193ad;
 }
 
 
