--- a/src/app/components/icons/icons.component.html
+++ b/src/app/components/icons/icons.component.html
@@ -1,11 +1,11 @@
+<app-search-box></app-search-box>
+
 <div class="icons">
     <!-- <hr noshade=""> -->
     <div class="intro">
-      <br>
     <h5>Welcome to the Online Fitness Class Finder!</h5>
     <h5>Find an online class that inspires you on your fitness journey :)</h5>
-  <br>  
-  </div><br>
+  </div>
     <hr>
     <table class="container">
         <tr>
