--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,12 +2,12 @@
 <div class="container">
     <form action="/login" class="container">
       <br>
-      <h3>Instructor Login:</h3>
+      <h4>Instructor Login:</h4>
       <input class="form-control" type="text" placeholder="Enter Email" name="email" required>
       <br>
       <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
         <br>
-      <p>Don't have an account? Register here.</p>
+      <p>Don't have an account? Register <a href="http://www.youtube.com">here.</a></p>
       <button type="submit" class="btn">Login</button>
       
     </form>
