--- a/src/app/components/fitness-classes-item/fitness-classes-item.component.html
+++ b/src/app/components/fitness-classes-item/fitness-classes-item.component.html
@@ -1,9 +1,9 @@
+
 <br>
     <table class = "table">
-
-            <td>
-                <img alt="boxing-gloves" src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png">
-                <p>{{fitnessClass.name}} 
+        <td>
+        <img alt="placeholderImage" src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png">
+        <p>{{fitnessClass.name}} 
         </p>
          <p>{{fitnessClass.date}} 
         </p>
