--- a/src/app/components/pages/about/about.component.css
+++ b/src/app/components/pages/about/about.component.css
@@ -1,11 +1,13 @@
 
 .background {
-    background-color: #1c7193ad;
+    background-color: white;
   }
   
   h4 {
     text-align: center;
-    color: white;
+    color: #1c7193ad;
+    font-weight: bold;
+    margin-bottom: 10px;
     
   }
 
@@ -16,4 +18,10 @@
 img {
     height: 150px;
     width: 150px;
+}
+
+div {
+
+  margin-top: 20px;
+
 }
