--- a/src/app/components/pages/search/search.component.html
+++ b/src/app/components/pages/search/search.component.html
@@ -1,9 +1,7 @@
 <div class="container">
     <form action="/searchResults" class="container">
-      <br>
-      <h3>Search for a Fitness Class:</h3>
-      <input class="form-control" type="text" placeholder="ex.) Skateboarding Pilates..." name="psw" required>
-        <br>
+      <h4>Search for a Fitness Class:</h4>
+      <input class="form-control" type="text" placeholder="Enter Search Keywords Here..." [(ngModel)] ="searchTerm">
         <label>All</label>
         <input type="radio" id="all" name="searchFilter">
         <label>Name of Fitness Class</label>
