--- a/src/app/components/fitness-classes/fitness-classes.component.html
+++ b/src/app/components/fitness-classes/fitness-classes.component.html
@@ -1,8 +1,29 @@
 
 
 <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search by Name, day of week or start time..."
+    <input type="text" class="form-control" placeholder="Search by Fitness Class Name..."
      [(ngModel)] ="searchTerm">
+     <label></label>
+     <label>M</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>T</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>W</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>Th</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>F</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>S</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <label>Su</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm">
+     <br>
+     <label>Recurring every week:</label>
+     <input type="checkbox" id="Recurring" [(ngModel)] ="searchTerm"> 
+     <br>
+     <!-- <label>Start time:</label>
+     <input type="time" id="time" [(ngModel)] ="searchTerm"> -->
 </div>
 
 
