--- a/src/app/components/icons/icons.component.html
+++ b/src/app/components/icons/icons.component.html
@@ -1,24 +1,23 @@
 <app-search-box></app-search-box>
 
 <div class="icons">
-    <!-- <hr noshade=""> -->
     <div class="intro">
     <h5>Welcome to the Online Fitness Class Finder!</h5>
     <h5>Find an online class that inspires you on your fitness journey :)</h5>
   </div>
-    <hr>
+    <hr noshade="">
     <table class="container">
         <tr>
-          <td>
-            <a href="/about">
+          <!-- <td> -->
+            <!-- <a href="/about">
                 <img alt="All" src="https://www.flaticon.com/svg/static/icons/svg/834/834693.svg">
                 <p>View all Fitness Classes</p>  
-              </a>
-          <td>
+              </a> -->
+          <!-- <td> -->
           <td>
             <a href="/search">
                 <img alt="Search" src="https://www.flaticon.com/svg/static/icons/svg/823/823473.svg">
-                <p>Search for a Fitness Class</p>  
+                <p>Explore Fitness Classes</p>  
               </a>
             </td>
           <td>
@@ -31,3 +30,5 @@
         </tr>
     </table>
 </div>
+<br>
+<br>
