--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -4,8 +4,8 @@
 
    <nav>
     <a routerLink="/">Home</a> |
-        <a routerLink="/about">All Fitness Classes</a> |
-        <a routerLink="/search">Search Fitness Classes</a> |
+        <a routerLink="/about">Explore Fitness Classes</a> |
+        <!-- <a routerLink="/search">Search Fitness Classes</a> | -->
         <a routerLink="/login">Instructor Login</a>
     </nav><br> 
 </header>
