--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     
     <div class="background">
-    <h4>All Fitness Classes</h4>
+    <h4>Search for Fitness Classes</h4>
 </div>
 <app-fitness-classes></app-fitness-classes>
