--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,19 +1,8 @@
 
-div {
-    text-align: center;
-    width: 290px;
-    background-color: white;
-    margin-top: 50px;
+.row {
+  margin-top:40px; padding:20px; background-color:#eff0f2;border-radius:15px;
+-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 }
-
-input {
-    text-align: center;
-}
-
-  
-  h4 {
-    color: #1c7193ad;
-    font-weight: bold;
-  }
-  
 
