--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,65 @@
 
-<div class="container">
+<div class="row">
+  <div class="col-sm-12" style="text-align:center;">
+    Login
+  </div>
+
+  <div class="col-sm-12">
+    <form [formGroup]="loginForm">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <small id="emailHelp" class="form-text text-muted"></small>
+      </div>
+      <div class="form-group">
+        <label for="passwordInput">Password</label>
+        <input type="password" type="password" class="form-control" id="passwordInput" aria-describedby="passHelp" placeholder="password">
+        <small id="passHelp" class="form-text text-muted"></small>
+      </div>
+
+      <div class="form-group" style="text-align:center;">
+          <button type="button" class="btn btn-dark" (click)="login()">Log in</button>
+          <button type="button" class="btn btn-secondary" (click)="moveToRegister()">Register</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-md-6 mt-5 mx-auto">
+      <form (submit)="login()">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" name="username" placeholder="username" [(ngModel)]="credentials.username">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="password" [(ngModel)]="credentials.password">
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+    </div>
+  </div>
+</div> -->
+
+
+<!-- <div class="container">
     <form action="/login" class="container">
       <br>
       <h4>Instructor Login:</h4>
+      <br>
       <input class="form-control" type="text" placeholder="Enter Email" name="email" required>
       <br>
       <input class="form-control" type="password" placeholder="Enter Password" name="psw" required>
         <br>
-      <p>Don't have an account? Register <a href="http://www.youtube.com">here.</a></p>
+      <p>Don't have an account? Register <a href="/register">here.</a></p>
       <button type="submit" class="btn">Login</button>
       
     </form>
     <br>
   </div>
-  <br>
+  <br> -->
   
   
