--- a/src/app/components/pages/search/search.component.css
+++ b/src/app/components/pages/search/search.component.css
@@ -12,22 +12,23 @@ input {
 
 
 h4 {
-  color: #1c7193ad;
+  color: #1c7193e8;
   font-weight: bold;
 }
 
 label {
-  color: #1c7193ad;
+  color: #1c7193e8;
   font-weight: bold;
   margin-left: 10px;
+  margin-right: 2px;
 }
 
 .form-control {
-  margin-top: 15px;
-  margin-bottom: 20px;
+  margin-top: px;
+  margin-bottom: 18px;
 }
 
 button {
-  margin-top: 10px;
+  margin-top: 15px;
 }
   
