--- a/src/app/components/fitness-class-details/fitness-class-details.component.html
+++ b/src/app/components/fitness-class-details/fitness-class-details.component.html
@@ -1,13 +1,13 @@
 
     <div class="pointerCursor">
-    <!-- <img alt="placeholderImage" src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"> -->
+    <img alt="placeholderImage" src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png">
         <br>
-        <!-- <div class="fitnessName">
+        <div class="fitnessName">
         {{fitnessClass.name}}</div>
         <div>
         {{fitnessClass.date}}
         <br> 
         {{fitnessClass.time}}
-    </div> -->
+    </div>
 </div> 
 
