--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,7 @@
-
-<div class="row">
+<div class="row" style="margin-top:40px; padding:20px; background-color:#eff0f2;border-radius:15px;
+-webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+-moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
   <div class="col-sm-12" style="text-align:center;">
     Login
   </div>
@@ -8,12 +10,12 @@
     <form [formGroup]="loginForm">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted"></small>
       </div>
       <div class="form-group">
         <label for="passwordInput">Password</label>
-        <input type="password" type="password" class="form-control" id="passwordInput" aria-describedby="passHelp" placeholder="password">
+        <input formControlName="password" type="password" class="form-control" id="passwordInput" aria-describedby="passHelp" placeholder="password">
         <small id="passHelp" class="form-text text-muted"></small>
       </div>
 
