--- a/src/app/components/userhome/userhome.component.html
+++ b/src/app/components/userhome/userhome.component.html
@@ -2,9 +2,9 @@
 -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
-  <!-- <div class="col-sm-12" style="text-align:center;">
+  <div class="col-sm-12" style="text-align:center;">
     Register
-  </div> -->
+  </div>
 
   <div class="col-sm-12">
       <div class="jumbotron">
@@ -18,3 +18,5 @@ box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
         </div>
   </div>
 </div>
+
+<!-- <p>Login Success :) You're doing great!</p> -->
