--- a/src/app/components/icons/icons.component.html
+++ b/src/app/components/icons/icons.component.html
@@ -15,7 +15,7 @@
               </a> -->
           <!-- <td> -->
           <td>
-            <a href="/search">
+            <a href="/about">
                 <img alt="Search" src="https://www.flaticon.com/svg/static/icons/svg/823/823473.svg">
                 <p>Explore Fitness Classes</p>  
               </a>
