--- a/src/app/components/add-fitness-class/add-fitness-class.component.css
+++ b/src/app/components/add-fitness-class/add-fitness-class.component.css
@@ -1,4 +1,4 @@
-.div {
+/* .div {
     align-content: center;
 }
 
@@ -9,4 +9,17 @@
 
 .form input[type='submit'] {
     flex: 2;
-}
+} */
+
+.form {
+    display: flex;
+  }
+  
+  .form input[type='text'] {
+    flex: 10;
+    padding: 5px;
+  }
+  
+  .form input[type='submit'] {
+    flex: 2;
+  }
