--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -1,6 +1,7 @@
+<app-nav-bar></app-nav-bar>
 <div class="container">
     
     <div class="background">
-    <h4>Search for Fitness Classes</h4>
+    <!-- <h4>Search for Fitness Classes</h4> -->
 </div>
 <app-fitness-classes></app-fitness-classes>
