--- a/src/app/components/fitness-class-details/fitness-class-details.component.html
+++ b/src/app/components/fitness-class-details/fitness-class-details.component.html
@@ -1,7 +1,9 @@
 
     <div class="pointerCursor">
-    <img alt="placeholderImage" src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png">
-        <br>
+            <br>
+        <div>
+            <img alt="placeholderImage" [src]="fitnessClass.pictureUrl">
+        </div>
         <div class="fitnessName">
         {{fitnessClass.name}}</div>
         <div>
