--- a/src/app/components/pages/search/search.component.html
+++ b/src/app/components/pages/search/search.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="container">
     <form action="/search" class="container">
       <h4>Search for a Fitness Class:</h4>
