--- a/src/app/components/fitness-class-details/fitness-class-details.component.css
+++ b/src/app/components/fitness-class-details/fitness-class-details.component.css
@@ -3,8 +3,8 @@ td {
 }
 
 img {
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 400px;
     border-top-left-radius: 50% 50%;
     border-top-right-radius: 50% 50%;
     border-bottom-right-radius: 50% 50%;
@@ -15,11 +15,20 @@ img {
     font-weight: bold;
     margin-top: 10px;
     padding: 0px;
+    text-align: center;
+    position: center;
     
 }
 
 div {
     color: #1c7193e8;
+    text-align: center;
+    position: center;
+        margin-top:40px; padding:20px; background-color:#eff0f2;border-radius:15px;
+      -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+      -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+      box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
+      
     
 }
 
