--- a/src/app/components/fitness-classes/fitness-classes.component.html
+++ b/src/app/components/fitness-classes/fitness-classes.component.html
@@ -6,7 +6,8 @@ box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
 <div class="form-group">
     <input type="text" class="form-control" placeholder="Search by Fitness Class Name..."
      [(ngModel)] ="searchTerm">
-     <label></label>
+     <p style="text-decoration: underline;">OR</p>
+     <label>Choose Day of Week:</label>
      <label>M</label>
      <input type="radio" id="Monday" name="recurring" value="Monday" [(ngModel)] ="searchTerms">
      <label>T</label>
