--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-
+<app-nav-bar></app-nav-bar>
 <div class="row" style="margin-top:40px; padding:20px; background-color:#eff0f2;border-radius:15px;
 -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
