--- a/src/app/components/userhome/userhome.component.html
+++ b/src/app/components/userhome/userhome.component.html
@@ -1,3 +1,7 @@
+<app-nav-bar-instructor></app-nav-bar-instructor>
+<div class="logout">
+<a class="btn btn-primary btn-lg" role="button" (click)="logout()">Log Out</a>
+</div>
 <div class="row" style="margin-top:40px; background-color:#eff0f2;
 -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
 -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
@@ -32,7 +36,7 @@ box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
             </app-fitness-class-item-instructor>
             </div>
           <p class="lead" style="color:white;">
-            <a class="btn btn-primary btn-lg" role="button" (click)="logout()">Log Out</a>
+            
           </p>
         </div></div>
   </div>
